# knowledge-graph

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  gkg-benchmark-config.toml  install.ps1  install.sh  jwt.secret.example  lefthook.yml  mise.toml  package-lock.json  package.json  task.md
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.exclude/: push-local-image.sh
.gitlab/: Default.md
.gitlab/issue_templates/: Bug_report.md  Default.md
.gitlab/merge_request_templates/: Default.md
bindings/go/: go.mod
crates/cli/: Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: lib.rs  testing.rs  types.rs
crates/database/src/graph/: mod.rs  relationship.rs
crates/database/src/kuzu/: config.rs  connection.rs  database.rs  mod.rs  result.rs  schema.rs  service.rs  types.rs
crates/database/src/querying/: library.rs  mappers.rs  mod.rs  query_builder.rs  service.rs  testing.rs  types.rs
crates/database/src/schema/: init.rs  manager.rs  mod.rs  types.rs
crates/database/src/testing/: mod.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs
crates/event-bus/src/types/: mod.rs  project_info.rs  workspace_folder.rs
crates/gkg/: Cargo.toml
crates/gkg/src/: cli.rs  main.rs  utils.rs
crates/gkg/src/commands/: clean.rs  index.rs  list.rs  mod.rs  query.rs  server.rs
crates/gkg/tests/: server.rs
crates/http-server/: Cargo.toml  build.rs
crates/http-server-deployed/: Cargo.toml
crates/http-server-deployed/src/: authentication.rs  endpoints.rs  lib.rs  main.rs  metrics.rs  test_helpers.rs
crates/http-server-deployed/src/endpoints/: health.rs  indexer.rs  metrics.rs  webserver.rs
crates/http-server-deployed/tests/: jwt_authentication.rs  server.rs
crates/http-server-desktop/: Cargo.toml
crates/http-server-desktop/src/: api.rs  lib.rs  watcher.rs
crates/http-server-desktop/src/endpoints/: events.rs  health.rs  mod.rs  workspace_delete.rs
crates/http-server-desktop/src/endpoints/graph/: graph_initial.rs  graph_neighbors.rs  graph_search.rs  graph_stats.rs  shared.rs
crates/http-server-desktop/src/queue/: dispatch.rs  job.rs
crates/http-server/bindings/: api.ts
crates/http-server/src/: api.rs  lib.rs  watcher.rs
crates/http-server/src/contract/: contract_tests.rs  mod.rs
crates/http-server/src/endpoints/: events.rs  info.rs  mcp.rs  mod.rs  root.rs  shared.rs  workspace_delete.rs  workspace_index.rs  workspace_list.rs
crates/http-server/src/endpoints/graph/: graph_initial.rs  graph_neighbors.rs  graph_search.rs  mod.rs  shared.rs
crates/http-server/src/queue/: dispatch.rs  job.rs  mod.rs  worker.rs
crates/http-server/src/testing/: mod.rs
crates/indexer/: Cargo.toml
crates/indexer-c-bindings/: Cargo.toml  c_bindings.h  cbindgen.toml
crates/indexer/src/: indexer.rs  lib.rs  repository.rs  runner.rs  stats.rs  tests.rs  writer.rs
crates/indexer/src/analysis/: files.rs  mod.rs  ruby.rs  types.rs
crates/indexer/src/analysis/languages/: csharp.rs  java.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs
crates/indexer/src/analysis/languages/java/: analyzer.rs  expression_resolver.rs  java_file.rs  tests.rs  types.rs  utils.rs
crates/indexer/src/analysis/languages/kotlin/: analyzer.rs  expression_resolver.rs  tests.rs
crates/indexer/src/analysis/languages/python/: analyzer.rs  interfile.rs
crates/indexer/src/analysis/languages/ruby/: analyzer.rs  expression_resolver.rs  scope_resolver.rs  tests.rs  type_map.rs
crates/indexer/src/database/: changes.rs  connection.rs  mod.rs  node_database_service.rs  query_builder.rs  schema.rs  types.rs  utils.rs
crates/indexer/src/deployed/: executor.rs
crates/indexer/src/execution/: config.rs  executor.rs
crates/indexer/src/mutation/: changes.rs  mod.rs  types.rs  utils.rs
crates/indexer/src/parsing/: changes.rs  file.rs  mod.rs  processor.rs
crates/indexer/src/project/: mod.rs  source.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: configuration.rs  duo_configuration.rs  handlers.rs  http.rs  http_handlers.rs  lib.rs  service.rs  sse.rs  types.rs
crates/mcp/src/tools/: analyze_code_file.rs  analyze_code_files.rs  available_tools_service.rs  call.rs  file_reader_utils.rs  get_symbol_references.rs  index_project.rs  list.rs  list_projects.rs  mod.rs  query_tools.rs  reindex_project.rs  search_codebase.rs  search_codebase_definitions.rs  types.rs  utils.rs  workspace_tools.rs  xml.rs
crates/mcp/src/tools/get_definition/: constants.rs  input.rs  mod.rs  output.rs  repository.rs  service.rs  tool.rs
crates/mcp/src/tools/get_references/: constants.rs  input.rs  mod.rs  output.rs  repository.rs  service.rs  tool.rs
crates/mcp/src/tools/import_usage/: constants.rs  input.rs  mod.rs  output.rs  repository.rs  service.rs  tool.rs
crates/mcp/src/tools/read_definitions/: constants.rs  input.rs  output.rs  repository.rs  service.rs  tool.rs
crates/mcp/src/tools/repo_map/: constants.rs  input.rs  mod.rs  output.rs  repository.rs  service.rs  tool.rs
crates/querying/: Cargo.toml
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs  repository.rs  zip.rs
crates/workspace-manager/: Cargo.toml
crates/workspace-manager/src/: data_directory.rs  errors.rs  lib.rs  manifest.rs  state_service.rs  workspace_manager.rs
crates/xtask/: Cargo.toml
docker/: Dockerfile  README.md  compose.build.yml  compose.portable.yml
docker/gkg/: Dockerfile
docker/http-server-deployed/: Dockerfile
docker/http-server-desktop/: Dockerfile
docker/old/: compose.yml
docker/reverse-proxy/: compose.build.nginx-proxy-acme-companion.yml  (+1 more)
docs/: bindings.md  release-process.md
hooks/: install.sh  pre-commit
observability/: README.md  docker-compose.yml
scripts/: build.sh  check-gitlab-ci.sh  macos-kuzu-install.sh  macos-sign-notarize.sh  semantic-release-finish.sh  semantic-release-prepare.sh  sign-and-repackage.sh  windows-prepare.ps1
(+36 files in other folders)
