[workspace]
members = ["crates/indexer", "crates/gkg", "crates/xtask", "crates/workspace-manager"]
resolver = "2"
edition = "2024"

[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["GitLab Inc."]
description = "A framework to create a structured, queryable graph database from code repositories to power AI features and enhance developer productivity."
repository = "https://gitlab.com/gitlab-org/rust/knowledge-graph"

[workspace.dependencies]
# use `cargo run -p xtask -- set-mode dev` to use local versions of the dependencies
# defaults to ../crates/parser-core and ../crates/gitalisk-core
parser-core = { git = "https://gitlab.com/gitlab-org/rust/gitlab-code-parser.git", tag = "v0.4.0" }
gitalisk-core = { git = "https://gitlab.com/gitlab-org/rust/gitalisk.git", tag = "v0.2.1" }

anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
toml = "0.8.23"
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
crossbeam-channel = "0.5.15"
log = "0.4.27"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tempfile = "3.20.0"
parquet = "55.1.0"
arrow = "55.1.0"
kuzu = "0.10.0"
thiserror = "2.0.12"
dirs = "6.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
sha2 = "0.10.8"
hex = "0.4.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
