[workspace]
members = [
  "crates/indexer",
  "crates/gkg",
  "crates/xtask",
  "crates/workspace-manager",
  "crates/http-server",
  "crates/mcp",
  "crates/logging",
  "crates/database",
  "crates/event-bus",
  "crates/testing",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
license = "MIT"
authors = ["GitLab Inc."]
description = "A framework to create a structured, queryable graph database from code repositories to power AI features and enhance developer productivity."
repository = "https://gitlab.com/gitlab-org/rust/knowledge-graph"

[workspace.dependencies]
# use `cargo run -p xtask -- set-mode dev` to use local versions of the dependencies
# defaults to ../crates/parser-core and ../crates/gitalisk-core
parser-core = { git = "https://gitlab.com/gitlab-org/rust/gitlab-code-parser.git", tag = "v0.5.0" }
gitalisk-core = { git = "https://gitlab.com/gitlab-org/rust/gitalisk.git", tag = "v0.3.1" }

anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
toml = "0.8.23"
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
crossbeam-channel = "0.5.15"
log = "0.4.27"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tempfile = "3.20.0"
parquet = "55.2.0"
arrow = "55.2.0"
kuzu = "0.10.1"
thiserror = "2.0.12"
dirs = "6.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
sha2 = "0.10.9"
hex = "0.4.3"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tokio = { version = "1.46.1", features = ["full"] }
ctrlc = "3.4.7"
single-instance = "0.3.3"
home = "0.5.11"
axum = "0.8.4"
axum-embed = "0.1.0"
http = "1.3.1"
once_cell = "1.21.3"
rust-embed = "8.7.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
ts-rs = "11.0.1"
tracing-appender = "0.2.3"
file-rotate = "0.8.0"
rmcp = { version = "0.2.1", features = ["server", "transport-streamable-http-server", "transport-worker", "transport-sse-server"] }
dashmap = "6.1.0"
tokio-util = "0.7.15"
miette = "7.6.0"
walkdir = "2.5.0"
watchexec = "8.0.1"
watchexec-events = "6.0.0"
watchexec-filterer-ignore = "7.0.0"
watchexec-signals = "5.0.0"
criterion = "0.6.0"

# Test dependencies
axum-test = "17.3.0"
tokio-test = "0.4.4"
reqwest = "0.12.22"
urlencoding = "2.1.3"
test-log = "0.2.18"
