[package]
name = "database"
version = "0.6.0"
edition = "2024"

[dependencies]
kuzu = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
test-utils = []
