[package]
name = "database"
version = "0.8.0"
edition = "2024"

[dependencies]
kuzu = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
test-utils = []
