[package]
name = "gkg"
version = "0.8.0"
edition = "2024"
description = "GitLab Knowledge Graph CLI"

[dependencies]
indexer = { path = "../indexer" }
workspace-manager = { path = "../workspace-manager" }
http-server = { path = "../http-server" }
mcp = { path = "../mcp" }
logging = { path = "../logging" }
event-bus = { path = "../event-bus" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
single-instance = { workspace = true }
home = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
ctrlc = { workspace = true }
database = { path = "../database" }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
