[package]
name = "gkg"
version = "0.18.1"
edition = "2024"
description = "GitLab Knowledge Graph CLI"

[features]
default = []
dev-tools = []

[dependencies]
indexer = { path = "../indexer" }
workspace-manager = { path = "../workspace-manager" }
http-server-desktop = { path = "../http-server-desktop" }
mcp = { path = "../mcp" }
logging = { path = "../logging" }
event-bus = { path = "../event-bus" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
single-instance = { workspace = true }
home = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
ctrlc = { workspace = true }
database = { path = "../database" }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
nix = { workspace = true, optional = true }
mimalloc = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0.16"
predicates = "3.1.2"
serde_json = { workspace = true }
single-instance = { workspace = true }
serial_test = { workspace = true }
