[package]
name = "http-server-deployed"
version = "0.17.0"
edition = "2021"

[features]
test-helpers = []

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
jsonwebtoken = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
workspace-manager = { path = "../workspace-manager" }
logging = { path = "../logging" }

[[bin]]
name = "http-server-deployed"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.17"
nix.workspace = true
serial_test.workspace = true
tempfile.workspace = true
axum-test.workspace = true
http-server-deployed = { path = ".", features = ["test-helpers"] }
