[package]
name = "http-server-desktop"
version = "0.14.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-embed = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
indexer = { path = "../indexer" }
mcp = { path = "../mcp" }
workspace-manager = { path = "../workspace-manager" }
logging = { path = "../logging" }
http = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
database = { path = "../database" }
ts-rs = { workspace = true, features = ["chrono-impl"] }
event-bus = { path = "../event-bus" }
num_cpus = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
urlencoding = { workspace = true }
watchexec.workspace = true
watchexec-events.workspace = true
watchexec-filterer-ignore.workspace = true
ignore-files = { workspace = true }
ignore = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
gitalisk-core = { workspace = true }
testing = { path = "../testing" }
test-log = { workspace = true }

[[bin]]
name = "dev-server"
path = "src/bin/dev.rs"

# Enabling this feature with `--features no-frontend` allows to run any lint checks
# with no frontend assets built
[features]
no-frontend = []
