[package]
name = "http-server"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
futures-util = "0.3.30"
indexer = { path = "../indexer" }
mcp = { path = "../mcp" }
workspace-manager = { path = "../workspace-manager" }
http = "1.1.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] } 