[package]
name = "http-server"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-embed = { workspace = true }
futures-util = { workspace = true }
indexer = { path = "../indexer" }
mcp = { path = "../mcp" }
workspace-manager = { path = "../workspace-manager" }
logging = { path = "../logging" }
http = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
ts-rs = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "dev-server"
path = "src/bin/dev.rs"