[package]
name = "indexer"
version = "0.3.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
parser-core = { workspace = true }
gitalisk-core = { workspace = true }
workspace-manager = { path = "../workspace-manager" }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
kuzu = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
miette = "7.6.0"
tempfile = { workspace = true }
tokio = { workspace = true }
walkdir = "2.5.0"
watchexec = "8.0.1"
watchexec-events = "6.0.0"
watchexec-filterer-ignore = "7.0.0"
watchexec-signals = "5.0.0"

