[package]
name = "logging"
edition = "2024"
version = "0.2.0"

[dependencies]
anyhow = { workspace = true }
file-rotate = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
workspace-manager = { path = "../workspace-manager" }
