[package]
name = "mcp"
version = "0.4.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true, features = ["server"] }
tracing = { workspace = true }
database = { path = "../database" }
workspace-manager = { path = "../workspace-manager" }

[dev-dependencies]
tempfile = { workspace = true }
database = { path = "../database", features = ["test-utils"] }
testing = { path = "../testing" }
