[package]
name = "mcp"
version = "0.7.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server", "transport-worker", "transport-sse-server"] }
database = { path = "../database" }
workspace-manager = { path = "../workspace-manager" }
axum = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
database = { path = "../database", features = ["test-utils"] }
testing = { path = "../testing" }
