[package]
name = "testing"
version = "0.19.0"
license = "MIT"
authors = ["GitLab Inc."]
description = "Testing utilities for the GitLab Knowledge Graph framework"
repository = "https://gitlab.com/gitlab-org/rust/knowledge-graph"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }

[[bin]]
name = "download-repos"
path = "src/bin/download_repos.rs"
