[package]
name = "workspace-manager"
version = "0.18.1"
license = "MIT"
authors = ["GitLab Inc."]
description = "Workspace management service for the GitLab Knowledge Graph framework"
repository = "https://gitlab.com/gitlab-org/rust/knowledge-graph"
edition = "2024"

[dependencies]
# Workspace dependencies
gitalisk-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
dunce = { workspace = true }

# Crate-specific dependencies
dirs.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true 
